Fixed background size on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -63,6 +63,11 @@ html, body {
   bottom: 0;
   z-index: 0;
 }
+@media only screen and (max-width: 737) {
+  #background-video {
+    width: 233vw;
+  }
+}
 /* --------------- End of Background ---------------- */
 
 /* --------------- Heading Text ---------------- */
